[Function add]
1.Strong reference and soft reference.
2. Add the log of gc.